Correction :  -> Modification de la scrollbar dans IE pour éviter qu'elle recouvre le contenu.

--- a/public_html/styles/css/main.css
+++ b/public_html/styles/css/main.css
@@ -1616,6 +1616,8 @@ ul, li {
 .icon-twitter:before {
   content: "C"; }
 
+@-ms-viewport {
+  width: auto !important; }
 .container-wrapper {
   margin-right: auto;
   margin-left: auto;
