--- a/public_html/styles/scss/_layout.scss
+++ b/public_html/styles/scss/_layout.scss
@@ -1,3 +1,6 @@
+// Empeche la scrollBar de recouvrir le contenu sur ie
+@-ms-viewport{ width: auto !important; }
+
 .container-wrapper
 {
     margin-right: auto;
